--- a/src/app/server-element/server-element.component.html
+++ b/src/app/server-element/server-element.component.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-  <div class="panel-heading">{{ element.name }}</div>
+  <div class="panel-heading">{{ element.serverName }}</div>
   <div class="panel-body">
     <p>
       <strong *ngIf="element.type === 'server'" style="color: red">{{
