--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -7,7 +7,10 @@
       <!-- Using two-way data binding  -->
       <!-- <input type="text" class="form-control" [(ngModel)]="newServerName">-->
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <!-- Using @ViewChild() decorator and local reference -->
+      <input type="text" class="form-control" #serverContentInput>
+      <!-- Using two-way data binding  -->
+      <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
       <br>
       <button
         class="btn btn-primary"
