--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,16 @@
       <app-server-element
         *ngFor="let serverElement of serverElements"
         [srvElement]="serverElement"
-      ></app-server-element>
+      >
+        <div class="panel-body">
+          <p>
+            <strong *ngIf="serverElement.type === 'server'" style="color: red">{{
+              serverElement.content
+            }}</strong>
+            <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+          </p>
+        </div>
+      </app-server-element>
     </div>
   </div>
 </div>
